fix: add vertical align, fix grid numbers

--- a/src/app/dashboard/data/data.component.css
+++ b/src/app/dashboard/data/data.component.css
@@ -36,10 +36,11 @@ td {
 }
 
 .table td, .table th, .table tr {
+    vertical-align: middle;
     word-break: keep-all; 
     overflow-wrap: break-word;
     white-space: normal; 
-    hyphens: auto!important; 
+    hyphens: auto!important;
   }
 
 .card {
